--- a/style.css
+++ b/style.css
@@ -26,7 +26,6 @@
 header { /* header completo */
    background-color: #202020;
    width: 100%;
-   padding-top: 20px;
    padding-bottom: 20px;
 }
 
@@ -46,15 +45,19 @@ header { /* header completo */
     padding: 0;
     border: none;
     background: none;
+    width: calc(100% + 30px);
+    height: calc(100% + 20px);
 }
 
-[type="boton-header-active"] { /* boton de la pagina actual */
+[type="boton-header-active"] { /* boton que marca la pagina actual */
     font-family: fjalla-one;
     font-size: 20px;
     color: white;
     padding: 0;
     border: none;
     background-color: #ff3300;
+    width: calc(100% + 30px);
+    height: calc(100% + 20px);
 }
 
 header button:hover { /* hover del boton */
