--- a/style.css
+++ b/style.css
@@ -1,11 +1,14 @@
 /* HEADER */
 
 header { /* header completo */
-   background-color: #fff;
-   width: 100%;
-   border-bottom: solid black;
+    background-color: #fff;
+    width: 100%;
+    border-bottom: solid black;
+    position: fixed;
+    top: 0;
+    z-index: 1000;
 }
-
+ 
 .header-con-secciones { /* header seccionado */
     display: flex;
     padding-bottom: 20px;
@@ -13,15 +16,15 @@ header { /* header completo */
     height: 70px;
     transition: all 1s ease;
 }
-
+ 
 .seccion-header { /* secciones del header */
     margin-right: 30px;
 }
-
+ 
 #boton-inicio { /* boton del inicio del header */
     margin-left: 200px;
 }
-
+ 
 [type="boton-header"] { /* boton del header */
     font-family: Fjalla One;
     font-size: 20px;
@@ -33,7 +36,7 @@ header { /* header completo */
     height: calc(100% + 20px);
     outline: none;
 }
-
+ 
 [type="boton-header-active"] { /* boton que marca la pagina actual */
     font-family: Fjalla One;
     font-size: 20px;
@@ -45,17 +48,17 @@ header { /* header completo */
     height: calc(100% + 20px);
     outline: none;
 }
-
+ 
 header button:focus { /* boton del header en focus */
     outline: none;
 }
-
+ 
 header button:hover { /* hover del boton */
     background-color: black;
     outline: none;
     color: white;
 }
-
+ 
 .search-bar { /* div de la search bar */
     position: relative;
     align-items: center;
@@ -64,12 +67,12 @@ header button:hover { /* hover del boton */
     display: flex;
     border: solid black;
 }
-
+ 
 .search-bar img { /* icono de la search bar */
     height: 20px;
     width: 20px;
 }
-
+ 
 input[type="text"] { /* search bar */
     font-family: Titillium Web;
     width: 270px;
@@ -79,7 +82,7 @@ input[type="text"] { /* search bar */
     outline: none;
     text-transform: uppercase;
 }
-
+ 
 button[type="submit"] { /* submit de la search bar */
     width: 30px;
     height: 30px;
@@ -89,20 +92,20 @@ button[type="submit"] { /* submit de la search bar */
     border: none;
     border-left: none;
 }
-
+ 
 /* ELEMENTOS OCULTOS DEL HEADER */
-
+ 
 .noticias-hover { /* contenido que aparece cuando haces hover a noticias */
     background-color: white;
     width: 100%;
     height: 350px;
     display: none;
 }
-
+ 
 .noticias-hover.show { /* muestra el contenido con el script */
     display: block;
 }
-
+ 
 .titulo-hover { /* titulo de los contenidos que aparecen al hacer hover a una seccion */
     font-family: Fjalla One;
     font-size: 32px;
@@ -110,7 +113,7 @@ button[type="submit"] { /* submit de la search bar */
     top: 30px;
     left: 100px;
 }
-
+ 
 .flexcards-hover { /* division con todas las cards del hover oculto */
     margin-left: 100px;
     margin-right: 100px;
@@ -119,19 +122,20 @@ button[type="submit"] { /* submit de la search bar */
     flex-direction: row;
     flex-wrap: wrap;
 }
-
+ 
 .card-hover { /* cards del hover oculto */
     width: 200px;
     height: 171px;
     background-color: white;
     margin-top: 50px;
 }
-
+ 
 .imagen-card-hover { /* imagenes de las cards del hover oculto */
     width: 200px;
     height: 171px;
+ 
 }
-
+ 
 .fecha-card-hover { /* fecha de las cards del hover oculto */
     font-family: Titillium Web;
     background-color: #7728B5;
@@ -143,7 +147,7 @@ button[type="submit"] { /* submit de la search bar */
     position: absolute;
     top: 308px;
 }
-
+ 
 .titulo-card-hover { /* titulo de la card del hover oculto */
     box-sizing: content-box;
     display: inline-block;
@@ -155,10 +159,67 @@ button[type="submit"] { /* submit de la search bar */
     font-family: Fjalla One;
     font-size: 18px;
 }
+ 
+/* SECCION DE AGENDA DEL INICIO */
 
+.titulo-agenda-inicio { /* titulo de la seccion */
+    font-family: fjalla one;
+    font-size: 48px;
+    color: black;
+    position: absolute;
+    top: 150px;
+    left: 160px;
+}
+
+.imagengrande-agenda-inicio { /* imagen grande debajo del titulo */
+    position: absolute;
+    left: 160px;
+    width: 400px;
+    height: 400px;
+}
+
+.degradeimagengrande-agenda-inicio { /* degrade de la imagen grande */
+    width: 400px;
+    height: 200px;
+    background: rgb(45,45,45);
+    background: linear-gradient(0deg, rgba(45,45,45,0) 0%, rgba(16,16,16,0.9) 100%);
+    position: absolute;
+    left: 160px;
+}
+
+.agenda-inicio { /* seccion de agenda descontando el titulo */
+    margin-top: 150px;
+    height: 400px;
+    display: flex;
+    position: relative;
+    background-color: red;
+}
+
+.engira-agenda-inicio { /* texto que va con la imagen grande */
+    font-family: DM Sans;
+    font-size: 32px;
+    color: white;
+    left: 185px;
+    top: 10px;
+    position: absolute;
+}
+
+.loproximo-agenda-inicio {
+    font-family: fjalla one;
+    font-size: 64px;
+    color: black;
+    transform: rotate(270deg);
+    position: absolute;
+    left: 409px;
+    top: 151px;
+    width: 400px;
+    display: block;
+}
 /* HTML Y BODY */
-
+ 
 html, body { /* html y body */
     margin: 0;
     padding: 0;
+    padding-top: 35px;
+    height: 2000px;
 }
