--- a/style.css
+++ b/style.css
@@ -176,6 +176,7 @@ button[type="submit"] { /* submit de la search bar */
     left: 160px;
     width: 400px;
     height: 400px;
+    object-fit: cover;
 }
 
 .degradeimagengrande-agenda-inicio { /* degrade de la imagen grande */
@@ -192,7 +193,6 @@ button[type="submit"] { /* submit de la search bar */
     height: 400px;
     display: flex;
     position: relative;
-    background-color: red;
 }
 
 .engira-agenda-inicio { /* texto que va con la imagen grande */
@@ -204,7 +204,7 @@ button[type="submit"] { /* submit de la search bar */
     position: absolute;
 }
 
-.loproximo-agenda-inicio {
+.loproximo-agenda-inicio { /* texto rotado de lo proximo */
     font-family: fjalla one;
     font-size: 64px;
     color: black;
@@ -214,6 +214,44 @@ button[type="submit"] { /* submit de la search bar */
     top: 151px;
     width: 400px;
     display: block;
+}
+
+.proximasgiras-agenda-inicio { /* seccion derecha de lo proximo */
+    display: flex;
+    flex-direction: column;
+    margin-left: 650px;
+}
+
+.card-agenda-inicio { /* card individual de proximas giras */
+    display: flex;
+    flex-direction: row;
+}
+
+.textogira-agenda-inicio { /* flexbox para la info de la gira */
+    justify-content: space-around;
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    margin-left: 10px;
+}
+
+.fechagira-agenda-inicio, .ubicaciongira-agenda-inicio { /*quita el margen de los textos */
+    margin: 0;
+}
+
+.imagen-agenda-inicio { /* imagen de las proximas giras */
+    width: 120px;
+    height: 120px;
+    object-fit: cover;
+}
+
+.proximasgiras-agenda-inicio hr {
+    margin-top: 9;
+    margin-bottom: 9;
+    border-top: 2px solid black;
+    width: 520px;
+    position: relative;
+    left: 100px;
 }
 /* HTML Y BODY */
  
