--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* HEADER */
 
 header { /* header completo */
-    background-color: #fff;
+    background-color: #131313;
     width: 100%;
     border-bottom: solid black;
     position: fixed;
@@ -9,44 +9,75 @@ header { /* header completo */
     z-index: 1000;
 }
  
+.imagen-logo-header {
+    height: 65px;
+    position: absolute;
+    left: 150px;
+}
 .header-con-secciones { /* header seccionado */
     display: flex;
     padding-bottom: 20px;
     background-size: cover;
-    height: 70px;
+    height: 65px;
     transition: all 1s ease;
 }
  
 .seccion-header { /* secciones del header */
-    margin-right: 30px;
+    margin-right: 54px;
 }
  
 #boton-inicio { /* boton del inicio del header */
-    margin-left: 200px;
+    margin-left: 290px;
 }
- 
+
+.imagen-boton-busqueda {
+    height: 39.04px;
+    filter: brightness(0) saturate(100%) invert(0%) sepia(93%) saturate(0%) hue-rotate(284deg) brightness(96%) contrast(107%);
+}
+
+.imagen-boton-busqueda.blanco {
+    filter: brightness(0) saturate(100%) invert(99%) sepia(5%) saturate(836%) hue-rotate(176deg) brightness(114%) contrast(100%);
+    transition: 0.3s;
+}
+
 [type="boton-header"] { /* boton del header */
     font-family: Fjalla One;
-    font-size: 20px;
+    font-size: 28px;
     color: black;
     padding: 0;
-    border: none;
     background: none;
     width: calc(100% + 30px);
     height: calc(100% + 20px);
     outline: none;
+    background-color: white;
+    border: none;
+    padding-left: 5px;
+    padding-right: 5px;
+    transition: 0.3s;
 }
- 
+
+#boton-busqueda { /* boton de la busqueda del header */
+    padding-left: 0px;
+    padding-right: 0px;
+}
+
+#boton-busqueda-hide { /* boton de la busqueda del header */
+    visibility: hidden;
+}
+
 [type="boton-header-active"] { /* boton que marca la pagina actual */
     font-family: Fjalla One;
-    font-size: 20px;
+    font-size: 28px;
     color: white;
     padding: 0;
     border: none;
-    background-color: #7728B5;
+    background-color: #6C00C0;
     width: calc(100% + 30px);
     height: calc(100% + 20px);
     outline: none;
+    padding-left: 5px;
+    padding-right: 5px;
+    transition: 0.3s;
 }
  
 header button:focus { /* boton del header en focus */
@@ -57,40 +88,6 @@ header button:hover { /* hover del boton */
     background-color: black;
     outline: none;
     color: white;
-}
- 
-.search-bar { /* div de la search bar */
-    position: relative;
-    align-items: center;
-    top: 16px;
-    margin-left: 30px;
-    display: flex;
-    border: solid black;
-}
- 
-.search-bar img { /* icono de la search bar */
-    height: 20px;
-    width: 20px;
-}
- 
-input[type="text"] { /* search bar */
-    font-family: Titillium Web;
-    width: 270px;
-    border: none;
-    height: 30px;
-    float: left;
-    outline: none;
-    text-transform: uppercase;
-}
- 
-button[type="submit"] { /* submit de la search bar */
-    width: 30px;
-    height: 30px;
-    background: grey;
-    color: white;
-    font-size: 17px;
-    border: none;
-    border-left: none;
 }
  
 /* ELEMENTOS OCULTOS DEL HEADER */
@@ -160,98 +157,49 @@ button[type="submit"] { /* submit de la search bar */
     font-size: 18px;
 }
  
-/* SECCION DE AGENDA DEL INICIO */
+/* Titulo, dropdown y searchbar */
 
-.titulo-agenda-inicio { /* titulo de la seccion */
-    font-family: fjalla one;
-    font-size: 48px;
-    color: black;
-    position: absolute;
-    top: 150px;
-    left: 160px;
-}
-
-.imagengrande-agenda-inicio { /* imagen grande debajo del titulo */
-    position: absolute;
-    left: 160px;
-    width: 400px;
-    height: 400px;
-    object-fit: cover;
-}
-
-.degradeimagengrande-agenda-inicio { /* degrade de la imagen grande */
-    width: 400px;
-    height: 200px;
-    background: rgb(45,45,45);
-    background: linear-gradient(0deg, rgba(45,45,45,0) 0%, rgba(16,16,16,0.9) 100%);
-    position: absolute;
-    left: 160px;
-}
-
-.agenda-inicio { /* seccion de agenda descontando el titulo */
-    margin-top: 150px;
-    height: 400px;
-    display: flex;
-    position: relative;
-}
-
-.engira-agenda-inicio { /* texto que va con la imagen grande */
-    font-family: DM Sans;
-    font-size: 32px;
-    color: white;
-    left: 185px;
-    top: 10px;
-    position: absolute;
-}
-
-.loproximo-agenda-inicio { /* texto rotado de lo proximo */
-    font-family: fjalla one;
-    font-size: 64px;
-    color: black;
-    transform: rotate(270deg);
-    position: absolute;
-    left: 409px;
-    top: 151px;
-    width: 400px;
-    display: block;
-}
-
-.proximasgiras-agenda-inicio { /* seccion derecha de lo proximo */
-    display: flex;
-    flex-direction: column;
-    margin-left: 650px;
-}
-
-.card-agenda-inicio { /* card individual de proximas giras */
+.artistas-desplegable-searchbar { /* display flex del titulo, el dropdown y la barra de busqueda */
     display: flex;
     flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    margin-top: 150px;
 }
 
-.textogira-agenda-inicio { /* flexbox para la info de la gira */
-    justify-content: space-around;
-    display: flex;
-    flex-direction: column;
-    margin: 0;
-    margin-left: 10px;
+.search-button img {
+    height: 54px;
 }
 
-.fechagira-agenda-inicio, .ubicaciongira-agenda-inicio { /*quita el margen de los textos */
-    margin: 0;
+.artistas-titulo {
+    position: absolute;
+    left: 120px;
+    font-family: Fjalla One;
+    font-size: 80px;
+    color: white;
 }
 
-.imagen-agenda-inicio { /* imagen de las proximas giras */
-    width: 120px;
-    height: 120px;
-    object-fit: cover;
+.dropdown-genero {
+    height: 78px;
+    font-size: 32px;
+    width: 233px;
+    left: 630px;
+    position: absolute;
 }
 
-.proximasgiras-agenda-inicio hr {
-    margin-top: 9;
-    margin-bottom: 9;
-    border-top: 2px solid black;
-    width: 520px;
-    position: relative;
-    left: 100px;
+.search-button {
+    height: 78px;
+    right: 110px;
+    position: absolute;
+    width: 82px;
+}
+
+.search-bar {
+    height: 78px;
+    right: 192px;
+    position: absolute;
+    width: 258px;
 }
 /* HTML Y BODY */
  
@@ -260,4 +208,5 @@ html, body { /* html y body */
     padding: 0;
     padding-top: 35px;
     height: 2000px;
+    background-color: #131313;
 }
