--- a/style.css
+++ b/style.css
@@ -10,24 +10,41 @@ header { /* header completo */
 }
  
 .imagen-logo-header {
-    height: 65px;
-    position: absolute;
-    left: 150px;
+    height: 58.56px;
+    position: relative;
+    left: 200.97px;
 }
 .header-con-secciones { /* header seccionado */
     display: flex;
     padding-bottom: 20px;
     background-size: cover;
-    height: 65px;
+    height: 58.56px;
     transition: all 1s ease;
 }
  
-.seccion-header { /* secciones del header */
-    margin-right: 54px;
-}
- 
 #boton-inicio { /* boton del inicio del header */
-    margin-left: 290px;
+    position: sticky;
+    left: 331.3px;
+}
+
+#boton-noticias { /* boton de noticias del header */
+    position: sticky;
+    left: 457.2px;
+}
+
+#boton-agenda { /* boton de agenda del header */
+    position: sticky;
+    left: 609.08px;
+}
+
+#boton-artistas { /* boton de artistas del header */
+    position: sticky;
+    left: 748.97;
+}
+
+#boton-exclusivos { /* boton de exclusivos del header */
+    position: sticky;
+    left: 902.86;
 }
 
 .imagen-boton-busqueda {
@@ -42,7 +59,7 @@ header { /* header completo */
 
 [type="boton-header"] { /* boton del header */
     font-family: Fjalla One;
-    font-size: 28px;
+    font-size: 22.67px;
     color: black;
     padding: 0;
     background: none;
@@ -67,7 +84,7 @@ header { /* header completo */
 
 [type="boton-header-active"] { /* boton que marca la pagina actual */
     font-family: Fjalla One;
-    font-size: 28px;
+    font-size: 22.67px;
     color: white;
     padding: 0;
     border: none;
@@ -92,98 +109,137 @@ header button:hover { /* hover del boton */
  
 /* Titulo, dropdown y searchbar */
 
-.artistas-desplegable-searchbar { /* display flex del titulo, el dropdown y la barra de busqueda */
+.artistas-searchbar { /* display flex del titulo, el dropdown y la barra de busqueda */
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
     justify-content: center;
     align-items: center;
-    margin-top: 150px;
+    margin-top: 202.66px;
 }
 
 .search-button img {
-    height: 54px;
+    height: 41.73px;
 }
 
 .artistas-titulo {
     position: absolute;
-    left: 120px;
+    left: 115.22px;
     font-family: Fjalla One;
-    font-size: 80px;
+    font-size: 75.56px;
     color: white;
 }
 
 .dropdown-genero {
-    height: 78px;
-    font-size: 32px;
-    width: 233px;
-    left: 630px;
+    height: 57px;
+    font-size: 24px;
+    width: 182px;
+    right: 100px;
     position: absolute;
     font-family: DM Sans;
     padding-left: 15px;
+    margin-top: 75px;
+    appearance: none; /* Eliminar estilo por defecto del navegador */
+    -webkit-appearance: none; /* Para navegadores webkit */
+    -moz-appearance: none; /* Para navegadores Firefox */
+    background: url('iconos/icono-flecha.svg') no-repeat 90%; /* Ruta a tu imagen de flecha */
+    background-size: 25px 25px; /* Tamaño de la flecha */
+    background-color: white;
+    outline: none;
 }
 
 .search-button {
-    height: 78px;
-    right: 110px;
+    height: 73.67px;
+    left: 1164.5025px;
     position: absolute;
-    width: 82px;
+    width: 80.2775px;
+    border: none;
+    border: 2px solid #8C8272;
+    outline: none;
+    background-color: #8C8272;
+    margin-left: -1px;
 }
 
+.search-button:focus {
+    outline: none;
+}
 .search-bar {
-    height: 78px;
-    right: 192px;
+    height: 73.67px;
+    left: 923.67px;
     position: absolute;
-    width: 258px;
+    width: 240.8325px;
     font-family: DM Sans;
-    font-size: 32px;
+    font-size: 30.4px;
     padding-left: 15px;
+    outline: none;
+    border: none;
+    border: 2px solid #8C8272;
+    background-color: #8C8272;
 }
 
+.search-bar::placeholder {
+    color: #3A3A3A;
+    opacity: 1; 
+}
 .ultimos-artistas {
     margin-top: 90px;
     position: absolute;
     font-family: Fjalla One;
-    font-size: 32px;
+    font-size: 30.22px;
     color: white;
-    left: 120px;
+    left: 114.28px;
 }
+
+.ult-artistas-dropdown {
+    position: relative;
+    z-index: 10; 
+}
+
 /* cards de artistas */
 
 .wrap-cards {
     display: flex;
     justify-content: center;
     position: relative;
+    margin-top: -120px;
+}
+.wrap-cards-primeras {
+    display: flex;
+    justify-content: center;
+    position: relative;
+    margin-top: 74px;
 }
 
 .card-artista {
-    margin-top: 160px;
+    margin-top: 76px;
     text-align: center;
-    height: 370px;
 }
 
+#primera {
+    margin-left: 15px;
+}
 #segunda {
-    padding-left: 35px;
-    padding-right: 35px;
+    padding-left: 76px;
+    padding-right: 76px;
 }
 
 .card-artista-nombre {
     position: relative;
-    bottom: 162px;
-    font-size: 36px;
+    bottom: 202px;
+    font-size: 34px;
     font-family: 'DM Sans';
     font-weight: 500;
     color: white;
 }
 
 .card-artista-degrade {
-    width: 345px;
-    height: 107px;
+    width: 327px;
+    height: 140.06px;
     position: relative;
-    bottom: 107px;
-    background: rgb(19,19,19);
-    background: linear-gradient(0deg, rgba(19,19,19,1) 0%, rgba(27,27,27,0) 100%);
+    bottom: 140.06px;
+    box-shadow: inset 0px -122.78px 51.09px -47.22px rgba(72,70,70,1);
 }
+
 /* HTML Y BODY */
  
 html, body { /* html y body */
@@ -192,4 +248,51 @@ html, body { /* html y body */
     padding-top: 35px;
     height: 2000px;
     background-color: #131313;
+}
+
+/* FOOTER */
+
+footer {
+    position: relative;
+    margin-top: 100px;
+    bottom:0;
+    width:100%;
+    height:367.39px;
+}
+
+.bsas-toweb {
+    position: relative;
+    top: 60px;
+    display: flex;
+    justify-content: center;
+}
+
+hr {
+    width: 1129.56px;
+    margin-top: 86px;
+    border: solid white 1.89px;
+}
+.footer-buenosairesciudad-logo {
+    padding-right: 73px;
+}
+.socials {
+    display: flex;
+    justify-content: center;
+    margin-top: 40px;
+}
+.footer-youtube-logo {
+    margin-right: 19px;
+}
+
+.footer-instagram-logo {
+    margin-right: 19px;
+}
+
+.copyright {
+    color: white;
+    font-size: 22.67px;
+    font-family: DM Sans;
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
 }
