--- a/style-perfil.css
+++ b/style-perfil.css
@@ -1,5 +1,6 @@
 html, body {
     height: fit-content;
+    overflow-x: hidden;
 }
 
 footer {
@@ -99,11 +100,6 @@ footer {
     display: none;
 }
 
-.sencillos.active, .albumes.active, .eps.active,
-.lps.active, .envivo.active, .colaboraciones.active {
-    display: flex;
-    justify-content: space-evenly;
-}
 .imagen-card-musica {
     width: 236.11px;
     height: 236.11px;
@@ -137,7 +133,6 @@ footer {
     font-family: DM Sans;
     font-size: 22.67;
     position: absolute;
-    background-color: #8C8272;
     width: 268.22;
     margin-top: 261px;
     margin-left: 17px;
@@ -153,3 +148,187 @@ footer {
     top: 776;
 }
 
+.preview-video-agenda {
+    display: flex;
+    flex-direction: column;
+    margin-top: 150px;
+    margin-bottom: -150px;
+}
+
+.titulo-videos {
+    font-family: Fjalla One;
+    font-size: 75.56px;
+    color: white;
+    margin-left: 120px;
+}
+
+.imagen-videos {
+    width: 1124.83px;
+    height: 613.89px;
+    display: flex;
+    margin-left: 120px;
+}
+
+.nombre-videos {
+    font-family: DM Sans;
+    font-size: 37.78px;
+    color: white;
+    margin-left: 220px;
+    position: relative;
+    bottom: 60px;
+}
+
+.icono-videos {
+    width: 137.64;
+    height: 164.99;
+    position: relative;
+    bottom: 450px;
+    left: 50%;
+}
+
+.noticias-perfil {
+    display: flex;
+    flex-direction: column;
+}
+
+.titulo-noticias {
+    font-family: Fjalla One;
+    font-size: 75.56px;
+    color: white;
+    margin-left: 120px;
+}
+
+.card-noticias {
+    width: 1129.56;
+    height: 363.61;
+    background-color: black;
+    margin-left: 120px;
+    margin-top: 45px;
+}
+
+.fecha-artista-card {
+    display: flex;
+    justify-content: space-between;
+}
+
+.fecha-card-noticias {
+    font-family: Fjalla One;
+    font-size: 22.67px;
+    color: white;
+    margin-left: 20px;
+    height: 37.44px;
+    padding-top: 3px;
+}
+
+.artista-card-noticias {
+    font-family: Fjalla One;
+    font-size: 22.67px;
+    color: white;
+    padding: 5px;
+    background-color: #6C00C0;
+    height: 37.44px;
+    text-align: center;
+    padding-top: 3px;
+}
+
+.titulo-parrafo-card {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    left: 440px;
+}
+
+.titulo-card-noticias {
+    font-family: Fjalla One;
+    font-size: 35.89px;
+    color: #6C00C0;
+    background-color: white;
+    width: 690.02px;
+    height: 122.78px;
+    padding: 10px;
+}
+
+.parrafo-card-noticias {
+    font-family: Titillium Web;
+    color: white;
+    font-size: 22.67px;
+    width: 653.16px;
+    padding: 10px;
+}
+
+.imagen-card-noticias {
+    width: 439.53px;
+    height: 327px;
+    position: relative;
+    bottom: 245.53px;
+}
+
+.leermas-card-noticias {
+    font-family: Fjalla One;
+    font-size: 18.89px;
+    color: white;
+    background-color: #6C00C0;
+    width: 90.74px;
+    height: 42.5px;
+    text-align: center;
+    padding: 10px;
+    position: relative;
+    bottom: 115px;
+    left: 580px;
+}
+
+.vertodas-noticias {
+    font-family: DM Sans;
+    font-size: 30.22px;
+    color: white;
+    text-decoration: underline;
+    margin-top: 20px;
+    margin-left: 1105px;
+}
+
+.fotos-artista {
+    margin-top: 80px;
+}
+
+.fotos-titulo {
+    font-family: Fjalla One;
+    font-size: 75.56px;
+    color: white;
+    margin-left: 120px;
+}
+
+.flex-fotos-cards {
+    display: flex;
+}
+
+#primera-foto {
+    margin-left: 120px;
+}
+
+.fotos-cards {
+    width: 362.67px;
+    height: 243.67px;
+}
+
+.imagen-foto-card {
+    width: 362.67px;
+    height: 243.67px;
+    position: absolute;
+}
+
+.degrade-foto-card {
+    width: 362.67px;
+    height: 136.94px;
+    background: rgb(19,19,19);
+    background: linear-gradient(0deg, rgba(19,19,19,1) 0%, rgba(27,27,27,0) 100%);
+    position: relative;
+    top: 110px;
+}
+
+.descripcion-foto-card {
+    position: relative;
+    font-family: DM Sans;
+    font-size: 18.89px;
+    color: white;
+    top: 45px;
+}
