--- a/style.css
+++ b/style.css
@@ -131,10 +131,11 @@ header button:hover { /* hover del boton */
 }
 
 .dropdown-genero {
-    height: 57px;
+    height: 77px;
     font-size: 24px;
     width: 182px;
-    right: 100px;
+    right: 400px;
+    bottom: -38px;
     position: absolute;
     font-family: DM Sans;
     padding-left: 15px;
@@ -149,14 +150,14 @@ header button:hover { /* hover del boton */
 }
 
 .search-button {
-    height: 73.67px;
+    height: 77px;
     left: 1164.5025px;
     position: absolute;
     width: 80.2775px;
     border: none;
-    border: 2px solid #8C8272;
+    border: 2px solid #D9D9D9;
     outline: none;
-    background-color: #8C8272;
+    background-color: #D9D9D9;
     margin-left: -1px;
 }
 
@@ -164,7 +165,7 @@ header button:hover { /* hover del boton */
     outline: none;
 }
 .search-bar {
-    height: 73.67px;
+    height: 77px;
     left: 923.67px;
     position: absolute;
     width: 240.8325px;
@@ -173,8 +174,8 @@ header button:hover { /* hover del boton */
     padding-left: 15px;
     outline: none;
     border: none;
-    border: 2px solid #8C8272;
-    background-color: #8C8272;
+    border: 2px solid #D9D9D9;
+    background-color: #D9D9D9;
 }
 
 .search-bar::placeholder {
@@ -193,6 +194,7 @@ header button:hover { /* hover del boton */
 .ult-artistas-dropdown {
     position: relative;
     z-index: 10; 
+    background-color: #6C00C0;
 }
 
 /* cards de artistas */
@@ -208,6 +210,8 @@ header button:hover { /* hover del boton */
     justify-content: center;
     position: relative;
     margin-top: 74px;
+    background-color: #6C00C0;
+    height: 619px;
 }
 
 .card-artista {
